# crewai-skills-crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/crewai_skills_crew/: crew.py  main.py
src/crewai_skills_crew/config/: agents.yaml  tasks.yaml
src/crewai_skills_crew/skills/: aws_cli.md  azure_cli.md  clickup.md  data_analysis.md  docker.md  email_sending.md  fastapi.md  file_ops.md  firebase.md  flutter.md  gcp_cli.md  git_ops.md  github_actions.md  github_api.md  http_request.md  jira_api.md  kubernetes.md  mongodb.md  nginx.md  node_js.md  notion_api.md  openai_api.md  playwright.md  postgres.md  react.md  read_file.md  redis.md  run_python.md  slack_api.md  ssh_ops.md  stripe_api.md  supabase.md  terraform.md  validate_csv.md  validate_data.md  validate_json.md  vercel.md  web_scraping.md  write_file.md  write_markdown_report.md  (+1 more)
src/crewai_skills_crew/tools/: __init__.py  bash_tool.py  list_skills_tool.py  load_skill_tool.py
